--- a/Hub/Hub/Profiles/QA1.plist
+++ b/Hub/Hub/Profiles/QA1.plist
@@ -1,5 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
-<dict/>
+<dict>
+	<key>Environment</key>
+	<dict>
+		<key>URL1</key>
+		<string></string>
+	</dict>
+	<key>LaunchImage</key>
+	<string></string>
+	<key>RequiresAuthentication</key>
+	<false/>
+</dict>
 </plist>
